--- a/css/layout.less
+++ b/css/layout.less
@@ -4,7 +4,6 @@
   height: 18px;
 }
 
-.navbar img.img-lg,
 .navbar .navbar-brand img {
   margin-top: -5px;
   height: 32px;
@@ -12,6 +11,12 @@
 
 .navbar .cubing-icon {
   font-size: 32px;
+  vertical-align: middle;
+}
+
+.navbar .navbar-brand .cubing-icon {
+  display: inline-block;
+  margin-top: -5px;
 }
 
 .navbar-plain-rectangle {
